Update es2015.md (#392)

--- a/docs/en/features/es2015.md
+++ b/docs/en/features/es2015.md
@@ -30,4 +30,4 @@ Since `vue-loader` only processes `*.vue` files, you'd need to tell Webpack to p
 
 ### Configuring Babel with `.babelrc`
 
-`babel-laoder` respects [`.babelrc`](https://babeljs.io/docs/usage/babelrc/), so it is the recommended approach to configure the Babel presets and plugins.
+`babel-loader` respects [`.babelrc`](https://babeljs.io/docs/usage/babelrc/), so it is the recommended approach to configure the Babel presets and plugins.
