--- a/docs/en/features/es2015.md
+++ b/docs/en/features/es2015.md
@@ -24,7 +24,7 @@ export default {
 
 We are using ES2015's Object literal shorthand here to define the child components. `{ ComponentA }` is simply shorthand for `{ ComponentA: ComponentA }`. Vue will automatically convert the key to `component-a`, so you can use the imported component in the template as `<component-a>`.
 
-### Traspiling Normal `.js` Files
+### Transpiling Normal `.js` Files
 
 Since `vue-loader` only processes `*.vue` files, you'd need to tell Webpack to process normal `*.js` files with `babel-loader` or `buble-loader` in the Webpack config file. The project scaffolded with `vue-cli` already does it for you.
 
